--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,7 +33,6 @@
   --mb-5: 2.5rem;
   /*===== z index =====*/
   --z-fixed: 100;
-
 }
 
 @media screen and (min-width: 768px){
@@ -53,7 +52,7 @@
 }
 
 html{
-  scroll-behavior:smooth;
+  scroll-behavior: smooth;
 }
 
 body{
@@ -97,7 +96,7 @@ img{
 
 .section-title{
   font-size: var(--h1-font-size);
-  color: var(--first-color);
+  color: var(--first-color-dark);
   margin-bottom: var(--mb-3);
   text-align: center;
 }
@@ -175,7 +174,7 @@ img{
 }
 
 .nav__link:hover{
-  color: var(--text-color)
+  color: var(--text-color);
 }
 
 .nav__toggle{
@@ -191,32 +190,345 @@ img{
 
 
 /*Active menu*/
-
+.active{
+  color: var(--first-color-lighten);
+}
 
 /*===== HOME =====*/
+.home__container{
+  height: calc(100vh - var(--header-height));
+  align-items: center;
+}
 
+.home__data{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: max-content;
+  text-align: center;
+}
+
+.home__img{
+  padding-top: 1.3rem;
+  padding-left: .8rem;
+  width: 160px;
+  height: 160px;
+  background-color: var(--first-color);
+  border-radius: 50%;
+  overflow: hidden;
+  margin-bottom: var(--mb-2);
+}
+
+.home__img img{
+  width: 155px;
+}
+
+.home__title{
+  font-size: var(--h1-font-size);
+  color: var(--first-color-dark);
+  margin-bottom: var(--mb-5);
+}
+
+.home__social{
+  margin-bottom: 5rem;
+}
+
+.home__social-link{
+  display: inline-flex;
+  background-color: var(--first-color-dark);
+  color: var(--first-color-light);
+  font-size: 1.1rem;
+  border-radius: 50%;
+  padding: .40rem;
+  margin: 0 var(--mb-1);
+  transition: .3s;
+}
+
+.home__social-link:hoover{
+  background-color: var(--first-color-dark);
+}
+
+.home__button{
+  width: 100%;
+}
 
 /*BUTTONS*/
+.button{
+  display: inline-block;
+  background-color: var(--first-color);
+  color: var(--first-color-darken);
+  padding: 1rem 2rem;
+  font-weight: var(--font-semi-bold);
+  border-radius: .5rem;
+  transition: .3s;
+}
 
+.button:hoover{
+  background-color: var(--first-color-lighten);
+}
+
+.button__light{
+  background-color: var(--first-color-dark);
+  color: var(--first-color);
+}
+
+.button__light:hover{
+  color: var(--first-color);
+}
 
 /* ===== ABOUT =====*/
+.about__container{
+  row-gap: 2rem;
+}
 
+.about__data{
+  text-align: center;
+}
+
+.about__description{
+  text-align: center;
+}
+
+.about__img{
+  width: 150px;
+  border-radius: .5rem;
+  margin: 0 auto;
+}
+
+.about__information{
+  margin-bottom: var(--mb-4);
+}
+
+.about__information-title{
+  font-size:var(--h3-font-size);
+  color: var(--first-color-dark);
+  margin-bottom: var(--mb-2);
+}
+
+.about__information-data{
+  display: flex;
+  align-items: center;
+  padding-left: 1.5rem;
+  margin-bottom: var(--mb-3);
+}
+
+.about__information-icon{
+  font-size: 1.5rem;
+  color: var(--first-color-dark);
+  margin-right: var(--mb-4);
+}
+
+.about_information-subtitle{
+  display: block;
+  font-weight: var(--font-semi-bold);
+}
+
+.about_information-subtitle-small{
+  font-size: var(--small-font-size);
+}
 
 /* ===== SKILLS =====*/
+.skills__container{
+  row-gap: 2rem;
+}
+
+.skills__subtitle{
+  font-size: var(--h3-font-size);
+  color: var(--first-color-dark);
+  margin-bottom: var(--mb-2);
+}
+
+.skills__data{
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 var(--mb-2);
+  margin-bottom: var(--mb-4);
+}
+
+.skills__name{
+  text-transform: uppercase;
+}
+
+.skills__bar{
+  position: absolute;
+  bottom: -.75rem;
+  height: .25rem;
+  background-color: var(--first-color);
+}
+
+.skills__html{
+  width: 60%;
+}
+
+.skills__js{
+  width: 50%;
+}
+
+.skills__python{
+  width: 70%;
+}
+
+.skills__sql{
+  width: 80%;
+}
+
+.skills__powerbi{
+  width: 60%;
+}
+
 
 
 /* ===== EDUCATION =====*/
+.education__container{
+  row-gap: 2rem;
+}
 
+.education__content{
+  display: grid;
+  grid-template-columns: 1fr max-content 1fr;
+}
 
+.education__year, .education__race{
+  font-size: var(--h3-font-size);
+  margin-bottom: .25rem;
+}
+
+.education__university, .education__specialty{
+  display: block;
+  font-size: var(--smaller-font-size);
+}
+
+.education__year, .education__university{
+  text-align: right;
+}
+
+.education__time{
+  padding: 0 1rem;
+  justify-self: center;
+}
+
+.education__rounder{
+  position: relative;
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  background-color: var(--first-color);
+
+}
+
+.education__rounder::before{
+  content: '';
+  position: absolute;
+  transform: translate(-4px, -4px);
+  width: 20px;
+  height: 20px;
+  border: 1px solid var(--first-color);
+  border-radius: 50%;
+}
+
+.education__line{
+  display: block;
+  height: 90%;
+  width: 2px;
+  background-color: var(--first-color);
+  transform: translate(5px, -4px);
+}
 /* ===== SERVICES =====*/
+.services__containter{
+  row-gap: 2rem;
+}
 
+.services__content{
+  padding: 1.5rem .5rem;
+  border: 2px solid var(--first-color);
+  border-radius: .5rem;
+  text-align: center;
+}
 
+.services__icon{
+  font-size: 2rem;
+  padding: .5rem;
+  background-color: var(--first-color);
+  color: var(--first-color-lighten);
+  border-radius: 50%;
+  margin-bottom: var(--mb-2);
+}
+
+.services__title{
+  font-size: 1.25rem;
+  color: var(--first-color-dark);
+  margin-bottom: var(--mb-1);
+}
+
+.services__content, .services__icon, .services__discription, .services__title{
+  transition: .5s;
+}
+
+.services__content:hover{
+  background-color: var(--first-color);
+}
+
+.services__content:hover .services__icon{
+  background-color: var(--first-color-lighten);
+  color: var(--first-color);
+}
+
+.services__content:hover .services__title{
+  color: var(--first-color-lighten);
+}
 /* ===== PROJECT IN MIND  =====*/
+.project{
+  background-color: var(--first-color);
+  padding-bottom: 0;
+}
 
+.project__container{
+  row-gap: 2rem;
+}
+
+.project__data{
+  text-align: center;
+}
+
+.project__title, .project__description{
+  color: var(--first-color-lighten);
+}
+
+.project__description{
+  margin-bottom: var(--mb-4);
+}
+
+.project__img{
+  width: 220px;
+  justify-self: center;
+}
 
 /* ===== WORKS =====*/
+.works__container{
+  justify-items: center;
+  row-gap: 2rem;
+}
 
+.works__img{
+  position: relative;
+  overflow: hidden;
+  border-radius: .5rem;
+}
 
+.works__data{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: var(--first-color);
+  border-radius: .5rem;
+  transition: .3s;
+}
 /* ===== CONTACT =====*/
 
 
