--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,30 +1,28 @@
 /*===== GOOGLE FONTS =====*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 /*===== VARIABLES CSS =====*/
-
-:root{
+:root {
   --header-height: 3rem;
   --nav-width: 324px;
   /*===== Font weight =====*/
   --font-medium: 500;
   --font-semi-bold: 600;
   --font-bold: 700;
-  /*===== Colors =====*/
-  --first-color: #DCDCDC;
-  --first-color-dark: #A9A9A9;
+  /*===== Colores =====*/
+  --first-color: #CC4B2C;
+  --first-color-dark: #662616;
   --first-color-darken: #290F09;
   --text-color: #54423D;
   --first-color-light: #EAE7E6;
   --first-color-lighten: #FFFAFA;
-  
   /*===== Font and typography =====*/
   --body-font: 'Poppins', sans-serif;
-  --h1-font-size: 1.5 rem;
-  --h2-font-size: 1.25 rem;
+  --h1-font-size: 1.5rem;
+  --h2-font-size: 1.25rem;
   --h3-font-size: 1rem;
-  --normal-font-size: .938rm;
-  --small-font-size: .813rm;
-  --smaller-font-size: .75rm;  
+  --normal-font-size: .938rem;
+  --small-font-size: .813rem;
+  --smaller-font-size: .75rem;
   /*===== Margenes =====*/
   --mb-1: .5rem;
   --mb-2: 1rem;
@@ -35,27 +33,27 @@
   --z-fixed: 100;
 }
 
-@media screen and (min-width: 768px){
-  :root{
+@media screen and (min-width: 768px) {
+  :root {
     --h1-font-size: 2.25rem;
     --h2-font-size: 1.5rem;
     --h3-font-size: 1.25rem;
     --normal-font-size: 1rem;
     --small-font-size: .875rem;
-    --smaller-font-size: .813rem; 
+    --smaller-font-size: .813rem;
   }
 }
-  
+
 /*===== BASE =====*/
-*,::before,::after{
+*, ::before, ::after {
   box-sizing: border-box;
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
-body{
+body {
   margin: var(--header-height) 0 0 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
@@ -65,43 +63,40 @@ body{
   line-height: 1.6;
 }
 
-h1,h2,h3,p{
+h1, h2, h3, p {
   margin: 0;
 }
 
-h3{
-  font-weight: var(--font-semi-bold);
-}
-
-ul{
+ul {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-a{
+a {
   text-decoration: none;
   color: var(--text-color);
 }
 
-img{
+img {
   max-width: 100%;
   height: auto;
   display: block;
 }
+
 /*===== CLASS CSS ===== */
-.section{
+.section {
   padding: 4rem 0 2rem;
 }
 
-.section-title{
+.section-title {
   font-size: var(--h1-font-size);
-  color: var(--first-color-dark);
+  color: var(--first-color);
   margin-bottom: var(--mb-3);
   text-align: center;
 }
 
-.section-subtitle{
+.section-subtitle {
   display: block;
   font-size: var(--small-font-size);
   color: var(--first-color-darken);
@@ -109,36 +104,37 @@ img{
   font-weight: var(--font-bold);
   margin-bottom: .25rem;
 }
+
 /*===== LAYOUT =====*/
-.bd-grid{
+.bd-grid {
   max-width: 1024px;
   display: grid;
   grid-template-columns: 100%;
   column-gap: 2rem;
   width: calc(100% - 2rem);
-  margin-left: var(--mb-5);
-  margin-right: var(--mb-5);
+  margin-left: var(--mb-2);
+  margin-right: var(--mb-2);
 }
-/*
-.1-header{
+
+.l-header {
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
   background-color: var(--first-color-lighten);
-  box-shadow: 0 2px 4px rgba(0,0,0,.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-*/
+
 /*===== NAV =====*/
-.nav{
+.nav {
   height: var(--header-height);
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.nav__menu{
+.nav__menu {
   position: fixed;
   top: 0;
   left: -100%;
@@ -151,56 +147,54 @@ img{
   transition: .5s;
 }
 
-.nav__close{
+.nav__close {
   position: absolute;
   top: 1rem;
   right: 1rem;
   font-size: 2rem;
   color: var(--first-color-dark);
   cursor: pointer;
-
 }
 
-.nav__item{
+.nav__item {
   margin-bottom: var(--mb-4);
 }
-/*color for the tab section: home, about, skills,  */
-.nav__link{
+
+.nav__link {
   font-size: 1rem;
   text-transform: uppercase;
-  color: var(--first-color-darken);
-  font-weight: var(--font-bold);
-  transition: 3s;
+  color: var(--first-color-lighten);
+  font-weight: bold;
+  transition: .3s;
 }
 
-.nav__link:hover{
+.nav__link:hover {
   color: var(--text-color);
 }
 
-.nav__toggle{
+.nav__toggle {
   color: var(--first-color-dark);
   font-size: 1.3rem;
   cursor: pointer;
-
 }
+
 /*=== Show menu ===*/
-.show{
+.show {
   left: 0;
 }
 
-
 /*Active menu*/
-.active{
-  color: var(--first-color-lighten);
+.active {
+  color: var(--text-color);
 }
 
 /*===== HOME =====*/
-.home__container{
+.home__container {
   height: calc(100vh - var(--header-height));
   align-items: center;
 }
 
-.home__data{
+.home__data {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -208,34 +202,41 @@ img{
   text-align: center;
 }
 
-.home__img{
-  padding-top: 1.3rem;
-  padding-left: .8rem;
+.home__img {
   width: 160px;
   height: 160px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
   background-color: var(--first-color);
   border-radius: 50%;
   overflow: hidden;
   margin-bottom: var(--mb-2);
 }
 
-.home__img img{
-  width: 155px;
+.home__img img {
+  width: 145px;
 }
 
-.home__title{
+.home__title {
   font-size: var(--h1-font-size);
+  color: var(--first-color);
+  font-weight: var(--font-semi-bold);
+}
+
+.home__profession {
+  font-size: var(--small-font-size);
   color: var(--first-color-dark);
   margin-bottom: var(--mb-5);
 }
 
-.home__social{
+.home__social {
   margin-bottom: 5rem;
 }
 
-.home__social-link{
+.home__social-link {
   display: inline-flex;
-  background-color: var(--first-color-dark);
+  background-color: var(--first-color);
   color: var(--first-color-light);
   font-size: 1.1rem;
   border-radius: 50%;
@@ -244,101 +245,103 @@ img{
   transition: .3s;
 }
 
-.home__social-link:hoover{
-  background-color: var(--first-color-dark);
+.home__social-link:hover {
+  background-color: var(--first-color-darken);
 }
 
-.home__button{
-  width: 100%;
+.home__button {
+  width: 90%;
 }
 
 /*BUTTONS*/
-.button{
+.button {
   display: inline-block;
   background-color: var(--first-color);
-  color: var(--first-color-darken);
+  color: var(--first-color-lighten);
   padding: 1rem 2rem;
-  font-weight: var(--font-semi-bold);
+  font-weight: var(--font-semi);
   border-radius: .5rem;
   transition: .3s;
 }
 
-.button:hoover{
-  background-color: var(--first-color-lighten);
-}
-
-.button__light{
+.button:hover {
   background-color: var(--first-color-dark);
+}
+
+.button__light {
+  background-color: var(--first-color-lighten);
   color: var(--first-color);
 }
 
-.button__light:hover{
-  color: var(--first-color);
+.button__light:hover {
+  color: var(--first-color-lighten);
 }
 
 /* ===== ABOUT =====*/
-.about__container{
+.about__container {
   row-gap: 2rem;
 }
 
-.about__data{
+.about__data {
   text-align: center;
 }
 
-.about__description{
-  text-align: center;
+.about__text {
+  margin-bottom: var(--mb-4);
 }
 
-.about__img{
+.about__img {
   width: 150px;
   border-radius: .5rem;
   margin: 0 auto;
 }
 
-.about__information{
+.about__information {
   margin-bottom: var(--mb-4);
 }
 
-.about__information-title{
-  font-size:var(--h3-font-size);
+.about__information-title {
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-semi-bold);
   color: var(--first-color-dark);
   margin-bottom: var(--mb-2);
 }
 
-.about__information-data{
+.about__information-data {
   display: flex;
   align-items: center;
-  padding-left: 1.5rem;
+  padding-left: var(--mb-3);
   margin-bottom: var(--mb-3);
 }
 
-.about__information-icon{
+.about__information-icon {
   font-size: 1.5rem;
-  color: var(--first-color-dark);
+  color: var(--first-color);
   margin-right: var(--mb-4);
 }
 
-.about_information-subtitle{
+.about__information-subtitle {
   display: block;
   font-weight: var(--font-semi-bold);
 }
 
-.about_information-subtitle-small{
+.about__information-subtitle-small {
   font-size: var(--small-font-size);
 }
 
 /* ===== SKILLS =====*/
-.skills__container{
+/* .skills__container {
   row-gap: 2rem;
 }
 
-.skills__subtitle{
+.skills__subtitle {
   font-size: var(--h3-font-size);
+  font-weight: var(--font-semi-bold);
   color: var(--first-color-dark);
   margin-bottom: var(--mb-2);
 }
 
-.skills__data{
+.skills__data {
   position: relative;
   display: flex;
   justify-content: space-between;
@@ -346,78 +349,89 @@ img{
   margin-bottom: var(--mb-4);
 }
 
-.skills__name{
+.skills__name {
   text-transform: uppercase;
 }
 
-.skills__bar{
+.skills__bar {
   position: absolute;
   bottom: -.75rem;
   height: .25rem;
   background-color: var(--first-color);
 }
 
-.skills__html{
-  width: 60%;
-}
-
-.skills__js{
-  width: 50%;
-}
-
-.skills__python{
-  width: 70%;
-}
-
-.skills__sql{
+.skills__html {
   width: 80%;
 }
 
-.skills__powerbi{
+.skills__js {
+  width: 90%;
+}
+
+.skills__react {
+  width: 70%;
+}
+
+.skills__angular {
   width: 60%;
 }
 
+.skills__php {
+  width: 80%;
+}
 
+.skills__node {
+  width: 70%;
+}
+
+.skills__firebase {
+  width: 90%;
+}
+
+.skills__python {
+  width: 60%;
+} */
 
 /* ===== EDUCATION =====*/
-.education__container{
+.education__container {
   row-gap: 2rem;
 }
 
-.education__content{
+.education__content {
   display: grid;
   grid-template-columns: 1fr max-content 1fr;
 }
 
-.education__year, .education__race{
+.education__year, .education__race {
   font-size: var(--h3-font-size);
+  font-weight: var(--font-semi-bold);
   margin-bottom: .25rem;
 }
 
-.education__university, .education__specialty{
+.education__university, .education__specialty {
   display: block;
   font-size: var(--smaller-font-size);
 }
 
-.education__year, .education__university{
+.education__year, .education__university {
   text-align: right;
 }
 
-.education__time{
+.education__time {
   padding: 0 1rem;
   justify-self: center;
 }
 
-.education__rounder{
+.education__rounder {
   position: relative;
   display: inline-block;
   width: 12px;
   height: 12px;
   background-color: var(--first-color);
-
+  border-radius: 50%;
 }
 
-.education__rounder::before{
+.education__rounder::before {
   content: '';
   position: absolute;
   transform: translate(-4px, -4px);
@@ -427,26 +441,44 @@ img{
   border-radius: 50%;
 }
 
-.education__line{
+.education__line {
   display: block;
   height: 90%;
   width: 2px;
   background-color: var(--first-color);
   transform: translate(5px, -4px);
 }
+
 /* ===== SERVICES =====*/
-.services__containter{
+.services__container {
   row-gap: 2rem;
 }
 
-.services__content{
+.services__content {
   padding: 1.5rem .5rem;
   border: 2px solid var(--first-color);
   border-radius: .5rem;
   text-align: center;
 }
 
-.services__icon{
+.services__content:hover {
+  background-color: var(--first-color);
+}
+
+.services__content:hover .services__icon {
+  background-color: var(--first-color-lighten);
+  color: var(--first-color);
+}
+
+.services__content:hover .services__title {
+  color: var(--first-color-lighten);
+}
+
+.services__content:hover .services__description {
+  color: var(--first-color-lighten);
+}
+
+.services__icon {
   font-size: 2rem;
   padding: .5rem;
   background-color: var(--first-color);
@@ -455,68 +487,61 @@ img{
   margin-bottom: var(--mb-2);
 }
 
-.services__title{
+.services__title {
   font-size: 1.25rem;
+  font-weight: var(--font-semi-bold);
   color: var(--first-color-dark);
   margin-bottom: var(--mb-1);
 }
 
-.services__content, .services__icon, .services__discription, .services__title{
+.services__content, .services__icon, .services__description, .services__title {
   transition: .5s;
 }
 
-.services__content:hover{
-  background-color: var(--first-color);
-}
-
-.services__content:hover .services__icon{
-  background-color: var(--first-color-lighten);
-  color: var(--first-color);
-}
-
-.services__content:hover .services__title{
-  color: var(--first-color-lighten);
-}
 /* ===== PROJECT IN MIND  =====*/
-.project{
+.project {
   background-color: var(--first-color);
   padding-bottom: 0;
 }
 
-.project__container{
+.project__container {
   row-gap: 2rem;
 }
 
-.project__data{
+.project__data {
   text-align: center;
 }
 
-.project__title, .project__description{
+.project__title, .project__description {
   color: var(--first-color-lighten);
 }
 
-.project__description{
+.project__description {
   margin-bottom: var(--mb-4);
 }
 
-.project__img{
+.project__img {
   width: 220px;
   justify-self: center;
 }
 
 /* ===== WORKS =====*/
-.works__container{
+.works__container {
   justify-items: center;
   row-gap: 2rem;
 }
 
-.works__img{
+.works__img {
   position: relative;
   overflow: hidden;
   border-radius: .5rem;
 }
 
-.works__data{
+.works__img:hover .works__data {
+  bottom: 0;
+}
+
+.works__data {
   position: absolute;
   bottom: -100%;
   width: 100%;
@@ -525,12 +550,12 @@ img{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: var(--first-color);
+  background: rgba(204, 75, 44, 0.7);
   border-radius: .5rem;
   transition: .3s;
 }
 
-.works__link{
+.works__link {
   display: inline-flex;
   font-size: 1.5rem;
   background-color: var(--first-color-lighten);
@@ -540,20 +565,17 @@ img{
   margin-bottom: var(--mb-2);
 }
 
-.works__title{
+.works__title {
   font-size: var(--h2-font-size);
   color: var(--first-color-lighten);
 }
 
-.works__img:hover .works__data{
-  bottom: 0;
-}
 /* ===== CONTACT =====*/
-.contact__container{
+.contact__container {
   row-gap: 3rem;
 }
 
-.contact__input{
+.contact__input {
   width: 100%;
   padding: 1rem;
   outline: none;
@@ -564,13 +586,13 @@ img{
   border-radius: .5rem;
 }
 
-.contact ::placeholder{
+.contact ::placeholder {
   color: var(--first-color-dark);
   font-family: var(--body-font);
   font-weight: var(--font-medium);
 }
 
-.contact__button{
+.contact__button {
   outline: none;
   border: none;
   font-family: var(--body-font);
@@ -578,44 +600,46 @@ img{
   cursor: pointer;
 }
 
-.contact__info{
+.contact__info {
   margin-bottom: var(--mb-3);
 }
 
-.contact__subtitle{
+.contact__subtitle {
   font-size: var(--h3-font-size);
+  font-weight: var(--font-semi-bold);
   color: var(--first-color-dark);
   margin-bottom: var(--mb-1);
 }
 
-.contact__text{
+.contact__text {
   display: block;
   padding-left: 1rem;
 }
+
 /* ===== FOOTER =====*/
-.footer{
+.footer {
   background-color: var(--first-color-darken);
-  color: var(--first-color);
+  color: var(--first-color-lighten);
   text-align: center;
 }
 
-.footer__title{
+.footer__title {
   font-size: var(--h1-font-size);
   margin-bottom: var(--mb-2);
 }
 
-.footer__description{
+.footer__description {
   margin-bottom: var(--mb-2);
 }
 
-.footer__social{
+.footer__social {
   margin-bottom: 3rem;
 }
 
-.footer__link{
+.footer__link {
   display: inline-flex;
   background-color: var(--first-color);
-  color: var(--first-color-darken);
+  color: var(--first-color-light);
   font-size: 1.1rem;
   border-radius: 50%;
   padding: .40rem;
@@ -623,4 +647,151 @@ img{
   transition: .3s;
 }
 
-/* ===== MEDIA QUERIES=====*/
+.footer__link:hover {
+  background-color: var(--first-color-lighten);
+  color: var(--first-color);
+}
+
+.footer__copy {
+  font-size: var(--smaller-font-size);
+  color: var(--text-color);
+}
+
+/* Scroll top */
+.scrolltop {
+  position: fixed;
+  right: 1rem;
+  bottom: -20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: .3rem;
+  background: rgba(204, 75, 44, 0.7);
+  border-radius: .4rem;
+  z-index: var(--z-tooltip);
+  transition: .4s;
+}
+
+.scrolltop:hover {
+  background-color: var(--first-color);
+}
+
+.scrolltop__icon {
+  font-size: 1.5rem;
+  color: var(--first-color-light);
+}
+
+/* Show scroll */
+.show-scroll {
+  bottom: 2rem;
+}
+
+/* ===== MEDIA QUERIES =====*/
+@media screen and (min-width: 768px) {
+  .nav__menu {
+    width: var(--nav-width);
+  }
+  .about__container,
+  .skills__container,
+  .services__container,
+  .works__container,
+  .contact__container,
+  .contact__inputs {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .about__data {
+    text-align: initial;
+  }
+  .about__text {
+    margin-bottom: var(--mb-5);
+  }
+  .about__img {
+    width: 220px;
+  }
+  .about__information {
+    padding-left: 4rem;
+  }
+  .education__time {
+    padding: 0 2rem;
+  }
+  .project {
+    background: none;
+  }
+  .project__container {
+    background-color: var(--first-color);
+    grid-template-columns: 2fr 1.2fr;
+    padding: 0 2rem;
+    border-radius: .5rem;
+  }
+  .project__data {
+    padding: 3rem 0;
+  }
+  .project__title, .project__data {
+    text-align: initial;
+  }
+  .project__img {
+    width: 230px;
+    align-self: flex-end;
+  }
+  .contact__inputs {
+    display: grid;
+    column-gap: 1.5rem;
+  }
+  .contact__info {
+    padding-left: 3rem;
+  }
+  .footer {
+    background: none;
+  }
+  .footer__container {
+    background-color: var(--first-color-darken);
+    padding: 3rem 0;
+    border-radius: .5rem;
+  }
+}
+
+@media screen and (min-width: 568px) {
+  .home__button {
+    width: initial;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  body {
+    margin: 0;
+    padding-left: var(--nav-width);
+  }
+  .l-header {
+    width: 0;
+  }
+  .nav__toggle, .nav__logo, .nav__close {
+    display: none;
+  }
+  .nav__menu {
+    left: 0;
+  }
+  .home__container {
+    height: 100vh;
+  }
+  .section {
+    padding: 3rem 0 2rem;
+  }
+  .section-title {
+    margin-bottom: var(--mb-4);
+  }
+  .bd-grid {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .services__container,
+  .works__container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+/* For tall screens on mobiles y desktop*/
+@media screen and (min-height: 721px) {
+  .home__container {
+    height: 640px;
+  }
+}
